Kubernetes/manifests/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: freshrss
  labels:
    name: freshrss
