Kubernetes/manifests/ingress.yaml
# Vanilla Kubernetes Ingress. Only use either this, or the ingressroute. Ideally, not both.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss-ingress
  namespace: freshrss
spec:
  rules:
    - host: freshrss.example.com  # Replace with your desired host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freshrss
                port:
                  number: 80
